ec2.tf
resource "aws_instance" "example" {
  ami                    = var.my_os_image
  instance_type          = var.machine_size
  key_name               = var.private_key_name
  # adding security group to ec2 vm
  vpc_security_group_ids = [aws_security_group.austin-security-groups.id]

  tags = {
    Name = var.vm_name
  }
}
